# BetterBee

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  project_architecture_overview.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  test_s3.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0e3a66c13602_create_users_and_workspaces_tables.py  8d7e30d4faa1_add_deleted_at_to_document.py  a63133b28733_create_documents_and_chunks_tables.py  ace658e79e10_create_chat_tables.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: __init__.py  auth.py  config.py  deps.py  exceptions.py  logging.py  middleware.py
backend/app/db/: __init__.py  base.py  engine.py
backend/app/models/: __init__.py  chat.py  chunk.py  document.py  user.py  workspace.py
backend/app/prompts/: __init__.py  answer.py  rewrite.py  title.py
backend/app/rag/: __init__.py  chunker.py  factory.py  parser.py  pipeline.py  retriever.py
backend/app/rag/interfaces/: __init__.py  embeddings.py  llm.py  reranker.py  vectorstore.py
backend/app/rag/providers/: __init__.py  anthropic_provider.py  bypass_reranker.py  chroma_vectorstore.py  cross_encoder_reranker.py  gemini_embeddings.py  gemini_provider.py  groq_provider.py  huggingface_embeddings.py  ollama_embeddings.py  ollama_provider.py  openai_embeddings.py  (+1 more)
backend/app/repositories/: __init__.py  base.py  chat_repo.py  chunk_repo.py  document_repo.py  user_repo.py  workspace_repo.py
backend/app/schemas/: __init__.py  analytics.py  chat.py  common.py  document.py  search.py  user.py  workspace.py
backend/app/services/: __init__.py  chat_service.py  document_service.py  search_service.py  storage_service.py  user_service.py  workspace_service.py
backend/app/workers/: __init__.py  celery_app.py
backend/storage_data/: b956db81-9ef4-4aa0-918f-19b4057fa92a.txt
backend/tests/: __init__.py
(+55 files in other folders)
