[project]
name = "betterbee-backend"
version = "0.1.0"
description = "BetterBee — Private AI Workspace Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # Storage
    "boto3>=1.35.0",

    # Background Tasks
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # AI — Provider-agnostic
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Document Parsing
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",

    # Observability
    "structlog>=24.4.0",
    "python-json-logger>=2.0.0",

    # Utilities
    "python-multipart>=0.0.12",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
